Bug 111311 - [CI][SHARDS] igt@i915_hangman@error-state-capture-vcs1 - fail - Failed assertion: strstr(expected_line, expected_ring_name)
Summary: [CI][SHARDS] igt@i915_hangman@error-state-capture-vcs1 - fail - Failed asser...
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: high normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
: 111326 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-08-07 07:01 UTC by Lakshmi
Modified: 2019-08-08 10:20 UTC (History)
1 user (show)

See Also:
i915 platform: ICL
i915 features: GEM/Other


Attachments

Description Lakshmi 2019-08-07 07:01:23 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6642/shard-iclb1/igt@i915_hangman@error-state-capture-vcs1.html

Starting subtest: error-state-capture-vcs1
(i915_hangman:1285) CRITICAL: Test assertion failure function check_error_state, file ../tests/i915/i915_hangman.c:168:
(i915_hangman:1285) CRITICAL: Failed assertion: strstr(expected_line, expected_ring_name)
Subtest error-state-capture-vcs1 failed.
Comment 2 Chris Wilson 2019-08-07 07:39:55 UTC
Bah, we never removed the fused off engine.
Comment 3 Chris Wilson 2019-08-07 07:46:21 UTC
Rather, the uABI finds the second vcs instance (CLASS_VIDEO_DECODE, 1), it's just that the HW is called, and always has been called, vcs2. Working out what the correct engine name should be going forward is a challenge...
Comment 4 Chris Wilson 2019-08-07 13:34:12 UTC
commit 2edda80db3d065b875731de2a846f9e700ccb5ce
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Aug 7 12:04:31 2019 +0100

    drm/i915: Rename engines to match their user interface
    
    During engine setup, we may find that some engines are fused off causing
    a misalignment between internal names and the instances seen by users,
    e.g. (I915_ENGINE_CLASS_VIDEO_DECODE, 1) may be vcs2 in hardware.
    Normally this is invisible to the user, but a few debug interfaces (and
    our own internal tracing) use the original HW name not the name the user
    would expect as formed from their class:instance tuple. Replace our
    internal name with the uabi name for consistency with, for example, error
    states.
    
    v2: Keep the pretty printing of class name in the selftest
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=111311
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Reviewed-by: Mika Kuoppala <mika.kuoppala@linux.intel.com>
    Link: https://patchwork.freedesktop.org/patch/msgid/20190807110431.8130-1-chris@chris-wilson.co.uk
Comment 5 Chris Wilson 2019-08-08 08:55:46 UTC
*** Bug 111326 has been marked as a duplicate of this bug. ***
Comment 6 CI Bug Log 2019-08-08 10:20:59 UTC
The CI Bug Log issue associated to this bug has been updated.

### New filters associated

* ICL: igt@i915_query@engine-info - fail - Failed assertion: gem_has_bsd2(fd)
  (No new failures associated)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.